# Pretty-debug-rs

./: Cargo.toml  Readme.md
examples/debug/: Cargo.toml
examples/debug/src/: connection.rs  debug.rs  main.rs
src/: lib.rs  test.rs
