[package]
name = "pretty_debug"
description = "Simple crate for module based formatted console prints"
repository = "https://github.com/Kay-Conte/Debugger-rs"
version = "0.1.3"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
